# slimtsf

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.agents/: llm_context.md
.agents/skills/slimtsf_tdd_workflow/: SKILL.md
.github/workflows/: ci.yml  publish.yml
slimtsf/: __init__.py  classifier.py
slimtsf/tests/: test_classifier.py  test_interval_stats_pooling.py  test_sliding_intervals.py
slimtsf/transformers/: __init__.py  interval_stats_pooling.py  sliding_intervals.py
