[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slimtsf"
dynamic = ["version"]
description = "Sliding-window multivariate time-series feature extraction and classification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["time-series", "machine-learning", "classification", "random-forest", "sliding-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "python-semantic-release>=10.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/kennaruk/slimtsf"
Repository = "https://github.com/kennaruk/slimtsf"
"Bug Tracker" = "https://github.com/kennaruk/slimtsf/issues"

# ---------------------------------------------------------------------------
# Version — derived from git tags via setuptools-scm (never hardcoded)
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
# Derives version from the latest git tag (e.g. v0.1.0 → 0.1.0)
# fallback_version is used in local dev when no git tag exists yet
fallback_version = "0.0.0.dev0"
root = "."

# ---------------------------------------------------------------------------
# Semantic Release
# ---------------------------------------------------------------------------
[tool.semantic_release]
build_command = "python -m build"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

# version_variables is intentionally omitted — version is authoritative via
# setuptools-scm git tags, so PSR does not need to update any version string.

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
upload_to_pypi = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["slimtsf/tests"]